--- a/index.html
+++ b/index.html
@@ -5,11 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone Colmar</title>
   <link rel="stylesheet" href="./resources/Css/style.css">
+  <link rel="icon" type="image/x-icon" href="./resources/images/ic-logo.svg">
 </head>
 <body>
-  <header>
-    
+
+  <!-- Header -->
+
+    <header>
+    <img src="./resources/images/ic-logo.svg" alt="Colmar logo">
+    <span class="colmar">Colmar</span>
+    <span class="academy">Academy</span>
+    <a href="#">Oncampus</a>
+    <a href="#">Online</a>
+    <a href="#">or companies</a>
+    <a href="#">Sign in</a>
   </header>
+
+    <!-- Banner section -->
+
+  <main>
+    <section class="banner">
+        <img src="./resources/images/banner.jpg"   alt="">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <input type="button" value="Start here">
+    </section>
+    <section class="main-information">
+      <div class="main-informatiion">
+        <img src="./resources/images/information-main.jpg" alt="">
+       <h2>It doesn't hurt to keep practicing</h2>
+        <p>Veritatis delectus dicta laborum in, expedita minus? Suscipit illum possimus, odio voluptate autem provident excepturi id beatae consectetur repellendus enim assumenda quaerat.</p>
+        <p class="small">Emanuel, Sr Strategist at Hirin.com</p>
+      </div>
+      <div class="orientation">
+        <img src="./resources/images/information-orientation.jpg" alt="">
+        <h4>Orientation date</h4>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+       <a href="#">Read more</a>
+      </div>
+      <div class="our-campus">
+        <h4>Our campus</h4>
+        <p>Find which campus is close by you</p>
+       <a href="#">Read more</a>
+      </div>
+      <div class="our-guest">
+        <h4>Our guest  lecture</h4>
+        <p>Join a keynote Oliver Sack about music in medical treatment</p>
+        <a href="#">Read more</a>
+      </div>
+    </section>
+
+    <!-- Cours section -->
+
+    <section class="cours">
+      <h2>Start learning</h2>
+      <div class="software">
+         <img src="./resources/images/course-software.jpg" alt="two computers">
+        <h4>Softwear engineering</h4>
+        <h6>COURSES</h6>
+        <p>Web development, Mobile development, iOT, APIs</p>
+      </div>
+      <div class="art">
+        <img src="./resources/images/course-computer-art.jpg" alt="two computers">
+        <h4>Computer art</h4>
+        <h6>COURSES</h6>
+        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+      </div>
+      <div class="design">
+        <img src="./resources/images/course-design.jpg" alt="two computers">
+        <h4>Design</h4>
+        <h6>COURSES</h6>
+        <p>User Experience Design, User Research, Visual Design</p>
+      </div>
+      <div class="data">
+        <img src="./resources/images/course-data.jpg">
+        <h4>Data</h4>
+        <h6>COURSES</h6>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+      <div class="business">
+        <img src="./resources/images/course-business.jpg">
+        <h4>Business</h4>
+        <h6>COURSES</h6>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+      <div class="marketing">
+        <img src="./resources/images/course-marketing.jpg">
+        <h4>Marketing</h4>
+        <h6>COURSES</h6>
+        <p>Analytics, Content Marketing, Mobile Markering</p>
+      </div>
+    </section>
+
+    <!-- Thesis section -->
+
+    <section class="thesis">
+      <h2>Thesis exchibit</h2>
+      <div class="urban">
+        <video src="./resources/videos/thesis.mp4" muted ></video>
+        <h4>Reimagine urban</h4>
+        <p>Nulla ducimus eaque odio modi aliquam, ab, architecto voluptatem reiciendis quibusdam, voluptatibus aspernatur delectus. Maxime, quibusdam quam minima nesciunt recusandae quasi corporis!</p>
+      </div>
+    </section>
+  </main>
+  
+  <!-- Footer -->
+
+  <footer>
+      <p class="copyright">© 2016 Colmar Academy. All rights reserved</p>
+      <p>Terms Privacy</p>
+  </footer>
+  
   
 </body>
 </html>
