Added Hidder and banner sections in css

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <img src="./resources/images/ic-logo.svg" alt="Colmar logo">
     <span class="colmar">Colmar</span>
     <span class="academy">Academy</span>
-    <a href="#">Oncampus</a>
-    <a href="#">Online</a>
-    <a href="#">or companies</a>
-    <a href="#">Sign in</a>
+    <ul>
+      <a href="#">Oncampus</a>
+      <a href="#">Online</a>
+      <a href="#">or companies</a>
+      <a href="#">Sign in</a>
+    </ul>
   </header>
 
     <!-- Banner section -->
@@ -26,9 +28,11 @@
   <main>
     <section class="banner">
         <img src="./resources/images/banner.jpg"   alt="">
+        <div class="banner-text">
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <input type="button" value="Start here">
+        </div>
     </section>
     <section class="main-information">
       <div class="main-informatiion">
